# yral-billing

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  deploy.sh  docker-compose.yml  entrypoint.sh  flake.nix  fly.toml  litestream.yml
.cargo/: config.toml
.github/workflows/: deploy.yml  docker-publish.yml
migrations/2025-11-27-081115-0000_create_purchase_tokens/: down.sql  up.sql
migrations/2025-12-03-174039-0000_create_purchase_tokens/: down.sql  up.sql
migrations/2026-03-06-000000_create_bot_chat_access/: down.sql  up.sql
src/: auth.rs  consts.rs  error.rs  lib.rs  main.rs  model.rs  schema.rs  types.rs
src/routes/: chat_access.rs  credits.rs  goole_play_billing_helpers.rs  mod.rs  purchase.rs  purchase_token_helpers.rs  rtdn.rs  utils.rs
static/: swagger.html
tests/: chat_access.rs  purchase.rs
