[package]
name = "yral-billing"
version = "0.1.0"
edition = "2021"

[features]
default = []
local = []
mock-google-api = []

[dependencies]
axum = "0.8.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
base64 = "0.22"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
diesel-async = { version = "0.5.0", features = ["sqlite", "bb8"] }
bb8 = "0.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
google-cloud-auth = "0.13"
utoipa = { version = "5.4", features = ["axum_extras"] }
yral-canisters-client = { git = "https://github.com/dolr-ai/yral-common", version = "0.1.0", features = ["user-info-service"] }
thiserror = "2.0"
ic-agent = "0.41.0"
stringreader = "0.1.1"
jsonwebtoken = "9.3"

[dev-dependencies]
tower = "0.5.1"


